collect(Collection.toList()) --> toList() en ErrorBuilder.extractFieldErrors